2003-02-26  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Dave.

	- fixed reproducible hang at http://asp.eltonsoft.dk/cast/get.asp?cat=Quicktime

	This was a set of mutually recursive frameset pages. This allows
	the number of frames to grow huge, which kills both WebCore and
	WebKit, so I added a hard limit of 200 total frames per page.
	
        * khtml/html/html_baseimpl.cpp:
        (HTMLFrameElementImpl::isURLAllowed):
        (HTMLFrameElementImpl::attach):
        (HTMLFrameElementImpl::detach):
        (HTMLIFrameElementImpl::attach):
        * khtml/html/html_baseimpl.h:
        * khtml/khtml_part.cpp:
        (KHTMLPart::init):
        (KHTMLPart::incrementFrameCount):
        (KHTMLPart::decrementFrameCount):
        (KHTMLPart::topLevelFrameCount):
        * khtml/khtml_part.h:

2003-02-26  David Hyatt  <hyatt@apple.com>

	Fix numerous regressions with text-decoration in quirks mode and
	also fixed a bug where text-decoration:none is not being honored
	on links.
	
        Reviewed by mjs

        * khtml/css/cssstyleselector.cpp:
        * khtml/rendering/render_object.cpp:
        (RenderObject::getTextDecorationColors):
        * khtml/rendering/render_object.h:
        * khtml/rendering/render_text.cpp:
        (TextRun::paintDecoration):

2003-02-26  David Hyatt  <hyatt@apple.com>

	Fix for 3179109. containingBlock() had a big old bug in it.
	For ABSOLUTE positioned elements, it would return inline relative
	positioned parents (when it should only be returning blocks).
	
        Reviewed by john

        * khtml/rendering/render_object.cpp:
        (RenderObject::containingBlock):

2003-02-25  David Hyatt  <hyatt@apple.com>

	Fix for findNextLayer problems.  There was nothing wrong with
	findNextLayer per se... it was just getting called *way* more
	often than it needed to be.

	Fixes two bugs, 3159866 and 3168815.
	
        Reviewed by darin

        * khtml/rendering/render_container.cpp:
        (RenderContainer::appendChildNode):